# YuuTinyRender

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  MakeFile  README.md  build.bat  build.ninja  build.ps1  build_cmake.ps1  build_quick.ps1  clean.ps1  cmake_install.cmake  compile_flags.txt  imgui.ini  main.cpp  main.txt  project_structure.txt
.cache/clangd/index/: Application.cpp.08F20D7EDD35C9C6.idx  Application.h.68977DDE9E658AFC.idx  BlinnPhongShader.cpp.C594CFABA121F4A7.idx  BlinnPhongShader.h.ADA169E5AFFDFB29.idx  Config_Modern.hpp.AF24EA9AF4D74A62.idx  DefaultShader.cpp.21A5EC492C43B97C.idx  DefaultShader.h.00F61D3BD9A4BD30.idx  InputHandler.cpp.C32CD07B3A320909.idx  InputHandler.h.00BE27D96B0099B1.idx  Ishader.h.2AD5FE66CCB02DF6.idx  Light.cpp.4DCA740EFE2D667F.idx  Light.h.3BB6C38CCB9B3462.idx  Material.h.242C6EC21DFA3AD9.idx  ModelManager.cpp.A3F99B4B69F19212.idx  ModelManager.h.33D0FBDF54FF6127.idx  RenderMode.cpp.457C291AE3653328.idx  RenderMode.h.DB54D833972E2005.idx  SDL.h.626392ED0465C196.idx  SDL_assert.h.31BDAE6B4A059B5D.idx  SDL_atomic.h.FB8C514B66B0C4D1.idx  SDL_audio.h.2D958BA1D5D1C170.idx  SDL_blendmode.h.423150E995A6E151.idx  SDL_clipboard.h.54BE68FF8A8C004E.idx  SDL_config.h.5D1F267A9B576596.idx  SDL_config_windows.h.B2263A178B07884A.idx  SDL_cpuinfo.h.7BC0029A0A5BF7F4.idx  SDL_endian.h.8FA070FD911A5776.idx  SDL_error.h.A3A4EFFDF11552A9.idx  SDL_events.h.A1951D15F1A23468.idx  SDL_filesystem.h.0549902CB702BE79.idx  SDL_gamecontroller.h.1A65CADCE63F98E7.idx  SDL_gesture.h.5EA836FC85AB0FC4.idx  SDL_guid.h.E8FD03D0C3271A05.idx  SDL_haptic.h.738BFFCF5E456DC6.idx  SDL_hidapi.h.4B3FDFB96C6ADB9D.idx  SDL_hints.h.6ADAB69510F510E0.idx  SDL_joystick.h.C0EB8C555743D021.idx  SDL_keyboard.h.48DFE682914BF511.idx  SDL_keycode.h.A764D3F0D5136297.idx  SDL_loadso.h.3F09E472C6425B29.idx  (+492 more)
include/: Application.h  Config_Modern.hpp  DefaultShader.h  InputHandler.h  Ishader.h  Light.h  Material.h  RenderMode.h  TextureSampler.h  UIManager.h  UIManger.h  antialiasing.h  camera.h  colorTable.h  config.h  constants.h  geometry.h  mat4.h  model.h  mtl_parser.h  renderer.h  tgaimage.h  utils.h  vec2.h  vec3.h  vec4.h
include/manager/: ModelManager.h
include/shader/: BlinnPhongShader.h  WireframeShader.h
src/: Application.cpp  DefaultShader.cpp  InputHandler.cpp  Light.cpp  RenderMode.cpp  TextureSampler.cpp  antialiasing.cpp  camera.cpp  colorTable.cpp  constants.cpp  geometry.cpp  mat4.cpp  material.cpp  model.cpp  mtl_parser.cpp  renderer.cpp  test_window.cpp  tgaimage.cpp  utils.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/manager/: ModelManager.cpp
src/shader/: BlinnPhongShader.cpp  WireframeShader.cpp
